@@ -1,5 +1,10 @@
 2001-12-11  Mark Mitchell  <mark@codesourcery.com>
 
+	* Makefile.in (RELINCDIR): New variable.
+	(PYTHON_PACKAGES_INSTALL): Use it.
+	* standard.mk.in (INSTALLINCDIR): New variable.
+	(NATPREFIX): Likewise.
+
 	* Makefile.in (PYTHON_PACKAGES_INSTALL): Use relative paths.
 	* README: Document Distutils version required.
 
